--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
  <li> <a href="training.html"> Training</a> </li>
  <li> <a href="Contact.html"> Contact Me</a> </li>
 </ul>
-    <img src="C:\Users\Lique\OneDrive\Desktop\Tetyana Web Site\Pictures\Blue Dress.jpg"\200x400 alt="Blue Dress" />
+    <img src=Pictures/Blue Dress.jpg\200x400 alt="Blue Dress" />
     </html>
