--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
  <li> <a href="training.html"> Training</a> </li>
  <li> <a href="Contact.html"> Contact Me</a> </li>
 </ul>
-    <img src="Pictures\Blue Dress.jpg"\100 alt="Blue Dress" /> 
+ </p>
+<img src="Pictures\Blue Dress.jpg"\200x400 alt="Blue Dress" />
+<p>
     </html>
