--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,6 @@
     <br> I love to play my piano </br>
 </p>
 <img src="Pictures\Woods Photo.jpg"\200x400 alt="Woods" />
-<p><a href=https://marquiswadebey.github.io/tetyanapiano/> Home</a> </p>
+<p><a href=https://marquiswadebey.github.io\tetyanapiano/> Home</a> </p>
 
 </html>
