--- a/training.html
+++ b/training.html
@@ -6,5 +6,5 @@ $150 Session per session
 or
 $500 monthly for 4 sessions</p>
 
-<a href=Index.html> Home</a> 
+<a href=index.html> Home</a> 
 </html>
