--- a/Contact.html
+++ b/Contact.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<p1>Phone Number <br>
-e-mail <br>
-
-</p1>
+<H1>Contact Me</H1>
+<p> 
+    <br> Phone Number </br>
+    <br> E-mail </br>
+    <br> Pager </br>
+</p>
  <a href="index.html"> Home </a> 
+
 </html>
+
