--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <head> 
+        <link 
+            rel="stylesheet"
+            href="./styles.css"
+        />
+    </head>
 <h1> Music Instructor Tetyana Guthrie</h1>
 <p> Hello, My name is Tetyana.</p>
 <hr />
