--- a/training.html
+++ b/training.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+   <head> 
+        <link 
+            rel="stylesheet"
+            href="./styles.css"
+        />
+    </head>
 <H1>Training</H1>
 <p>Cost <br>
 $150 Session per session
