--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+     <head> 
+        <link 
+            rel="stylesheet"
+            href="./styles.css"
+        />
+    </head>
 <H1>About Me</H1>
 <p> 
     <br> I love to cook </br>
