--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+     <head> 
+        <link 
+            rel="stylesheet"
+            href="./styles.css"
+        />
+    </head>
 <H1>Contact Me</H1>
 <p> 
     <br> Phone Number </br>
