--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head> 
         <link 
             rel="stylesheet"
-            href="./styles.css"
+            href="styles.css"
         />
     </head>
 <h1> Music Instructor Tetyana Guthrie</h1>
