--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <p> I am an educator with 20 years of experience.</p>
  <ul>
 
- <li> <a href="./aboutme.html">About Me</a> </li> 
- <li> <a href="training.html"> Training</a> </li>
- <li> <a href="Contact.html"> Contact Me</a> </li>
+ <ol> <a href="./aboutme.html">About Me</a> </ol> 
+ <ol> <a href="training.html"> Training</a> </ol>
+ <ol> <a href="Contact.html"> Contact Me</a> </ol>
 </ul>
  </p>
 <img src="Pictures\Blue Dress.jpg"\200x400 alt="Blue Dress" />
