--- a/aboutme.html
+++ b/aboutme.html
@@ -8,9 +8,14 @@
     </head>
 <H1>About Me</H1>
 <p> 
-    <br> I love to cook </br>
-    <br> I love horse back riding </br>
-    <br> I love to play my piano </br>
+    <br> Tetyana Paniotova Guthrie has been studying the piano since the age of five in the Ukraine and has participated in multiple competitions as a soloist and as part of collaborative ensembles with violinists, cellists and vocalists. </br> 
+    <br> Over the course of her career she has been trained by many outstanding pianists, but especially Dr. Mykola Suk, a distinguished and highly acclaimed Ukrainian-American pianist who is currently teaching at UNLV.  </br>
+    <br> After completing her graduate studies at Denver University's Lamont School of Music, under the direction of Stephanie Cheng, she served as a graduate teacher assistant during those graduate studies. </br>
+    <br> While at the University of Denver, she was teaching students at many levels and with a variety of skills based on her classical training, both in private lessons and group classes. </br> 
+
+    <br> Her professional background has allowed her to acquire a wealth of experience, which she utilized in her Masters Thesis, in which she examined the distinctions between traditional and contemporary piano techniques. </br>  
+
+    <br> With all this, she is now able to apply multiple piano techniques and methods to ensure the success of her students and she holds both a Master in Piano Performance and Master of Education degree as well as an active Teacher license in the state of Colorado. </br>   
 </p>
 <img src="Pictures\Woods Photo.jpg"\200x400 alt="Woods" />
 <p>
