--- a/training.html
+++ b/training.html
@@ -8,7 +8,7 @@
     </head>
 <H1>Training</H1>
 <p>Cost <br>
-$150 Session per session
+$150 per session
 or
 $500 monthly for 4 sessions</p>
 <a href="index.html"> Home </a> 
