--- a/index.html
+++ b/index.html
@@ -1,22 +1,100 @@
-<!DOCTYPE html>
-<html>
-  <head> 
-        <link 
-            rel="stylesheet"
-            href="styles.css"
-        />
-    </head>
-<h1> Music Instructor Tetyana Guthrie</h1>
-<p> Hello, My name is Tetyana.</p>
-<hr />
-<p> I am an educator with 20 years of experience.</p>
- <ul>
 
- <ol> <a href="./aboutme.html">About Me</a> </ol> 
- <ol> <a href="training.html"> Training</a> </ol>
- <ol> <a href="Contact.html"> Contact Me</a> </ol>
-</ul>
- </p>
-<img src="Pictures\Blue Dress.jpg"\200x400 alt="Blue Dress" />
-<p>
-    </html>
+    <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <title> Tetyana Music Instructor</title>    
+        <style> 
+            body { 
+            margin: 0; 
+             font-family: Arial, sans-serif; 
+            }  
+   
+              /* Left side with black background */ 
+              .left-side { 
+                   background-color: black; 
+                   width: 25%; 
+                   height: 100vh; 
+                   position: fixed; 
+                   left: 0; 
+                   top: 0;
+                   color: white; /* Set text color to white */ 
+                   padding: 80px;  
+                           } 
+   
+               /* Right side with fixed image */ 
+                .right-side { 
+                   width: 50%; 
+                   margin-left: 50%; 
+                   background-image:  <img src=Pictures\Pro-Photo.jpg /> 
+                   background-size: cover; 
+                   background-attachment: fixed; 
+                   height: 100vh; 
+                            } 
+
+               /* Navigation bar at the top */ 
+               .navbar {
+                   position: fixed; 
+                   top: 0; 
+                   width: 100%; 
+                   background-color: #333; 
+                   padding: 15px; 
+                   z-index: 1; 
+                   text-align: center; 
+                        } 
+   
+               /* Navigation buttons */ 
+               .navbar a { 
+                   display: inline-block; 
+                   padding: 10px 20px; 
+                   font-size: 16px; 
+                   text-align: center; 
+                   text-decoration: none; 
+                   cursor: pointer; 
+                   border: 2px solid #a5a9ac; /* Set the color of the outline */ 
+                   border-radius: 20px; /* Set the border radius to make it round */ 
+                   color: #060c10; /* Set the text color */ 
+                   background-color: transparent; /* Set the background color to transparent */ 
+                   transition: background-color 0.3s, color 0.3s; 
+                   background-color: #05150e; /* Change the background color on hover */ 
+                   color: #ffffff; /* Change the text color on hover */ 
+   
+                        } 
+   
+        
+   
+               /* Style for the active button */ 
+               .navbar a.active { 
+                   border-bottom: 2px solid white; 
+               } 
+           </style> 
+       </head> 
+         
+<body>
+  <!-- Navigation bar at the top --> 
+
+  <div class="navbar"> 
+    <a href="#" class="active">Home</a> 
+    <a href="./aboutme.html">About Me</a> 
+    <a href="Contact.html"> Contact Me</a> 
+    <a href="training.html"> Training</a>
+  </div>
+
+         <!-- Left side with black background --> 
+         <div class="left-side"> 
+            <h1> Music Instructor Tetyana Guthrie</h1>
+            <p> Hello, My name is Tetyana.</p>
+            <hr />
+            <p> I am an educator with 20 years of experience.</p>
+        </div> 
+
+                   <!-- Right side with fixed image --> 
+        <div class="right-side"> 
+            <img src="Pictures\Pro-Photo.jpg"\25x50 alt="Pro Photo" /> 
+         </div> 
+ 
+         <!-- Your content goes here --> 
+ 
+     </body> 
+</html>
