--- a/training.html
+++ b/training.html
@@ -12,5 +12,5 @@ $150 per session
 or
 $500 monthly for 4 sessions</p>
 <a href="index.html"> Home </a> 
-   <img src="Pictures\Tati on Piano.jpg"\25x50 alt="Blue Dress" /> 
+   <img src="Pictures/Tati on Piano.jpg"\25x50 alt="Blue Dress" /> 
 </html>
