--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 .right-side { 
                    width: 50%; 
                    margin-left: 50%; 
-                   background-image:  <img src=Pictures/Pro-Photo.jpg/> 
+                   background-image:  <img src=Pictures/Pro-Photo 2.jpg/> 
                    background-size: cover; 
                    background-attachment: fixed; 
                    height: 100vh; 
@@ -91,7 +91,7 @@
 
                    <!-- Right side with fixed image --> 
         <div class="right-side"> 
-            <img src="Pictures/Pro-Photo.jpg"\25x50 alt="Pro Photo" /> 
+            <img src="Pictures/Pro-Photo 2.jpg"\25x50 alt="Pro Photo" /> 
          </div> 
  
          <!-- Your content goes here --> 
