--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                    background-size: cover; 
                    background-attachment: fixed; 
                    height: 100vh; 
+                   padding-top: 80px;
                             } 
 
                /* Navigation bar at the top */ 
