--- a/Contact.html
+++ b/Contact.html
@@ -8,9 +8,8 @@
     </head>
 <H1>Contact Me</H1>
 <p> 
-    <br> Phone Number </br>
-    <br> E-mail </br>
-    <br> Pager </br>
+    <br> Phone Number: 719-406-1882 </br>
+    <br> E-mail: Tetyanaguthrie@gmail.com </br>
 </p>
  <a href="index.html"> Home </a> 
 
