--- a/training.html
+++ b/training.html
@@ -8,9 +8,8 @@
     </head>
 <H1>Training</H1>
 <p>Cost <br>
-$150 per session
-or
-$500 monthly for 4 sessions</p>
+$50 per hour depending on age. Please ask me about my prices.
+</p>
 <a href="index.html"> Home </a> 
    <img src="Pictures/Tati on Piano.jpg"\25x50 alt="Blue Dress" /> 
 </html>
