--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,8 @@
     <br> Her professional background has allowed her to acquire a wealth of experience, which she utilized in her Masters Thesis, in which she examined the distinctions between traditional and contemporary piano techniques. </br>  
     <br> With all this, she is now able to apply multiple piano techniques and methods to ensure the success of her students and she holds both a Master in Piano Performance and Master of Education degree as well as an active Teacher license in the state of Colorado. </br>   
 </p>
-<img src="Pictures\Woods Photo.jpg"\200x400 alt="Woods" />
+<img src="Pictures\Woods Photo.jpg"\200x400 alt="Woods" /> <img src="Pictures\with her son.jpg"\200x400 alt="Picture with sons" /> <img src="Pictures\Son's 3.jpg"\200x400 alt="another picture with sons" /> 
+
 <p>
 <a href="index.html"> Home </a> 
 </p>
