--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,11 @@
         />
     </head>
 <H1>About Me</H1>
+ <div class="navbar"> 
+    <a href=index.html class="active">Home</a> 
+    <a href="Contact.html"> Contact Me</a> 
+    <a href="training.html"> Training</a>
+</div>
 <p> 
     <br> Tetyana Paniotova Guthrie has been studying the piano since the age of five in the Ukraine and has participated in multiple competitions as a soloist and as part of collaborative ensembles with violinists, cellists and vocalists. </br> 
     <br> Over the course of her career she has been trained by many outstanding pianists, but especially Dr. Mykola Suk, a distinguished and highly acclaimed Ukrainian-American pianist who is currently teaching at UNLV.  </br>
@@ -17,7 +22,4 @@
 </p>
 <img src="Pictures\Woods Photo.jpg"\200x400 alt="Woods" /> <img src="Pictures\with her son.jpg"\200x400 alt="Picture with sons" /> <img src="Pictures\Son's 3.jpg"\200x400 alt="another picture with sons" /> 
 
-<p>
-<a href="index.html"> Home </a> 
-</p>
 </html>
