--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
             <img src="Pictures/Pro-Photo 2.jpg"\25x50 alt="Pro Photo" /> 
          </div> 
  
-         <!-- Your content goes here --> 
+         <!-- Your content goes here -->
+     <footer>
+        &copy; 2023 Cyber Secure Bay
+    </footer>
  
      </body> 
 </html>
