--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title> Tetyana Music Instructor</title>    
+
+        <!--link to css stylesheet. -->
+        <link rel="stylesheet" href="styles.css">
         <style> 
             body { 
             margin: 0; 
